--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
 @import 'theme/typography';
 @import 'theme/default.scss';
 
+@import 'components/popover';
 @import 'components/button';
 @import 'components/scrollbar';
 @import 'components/input';
