--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -1,6 +1,6 @@
 #nav-bar-container {
     background-color: $color-primary;
-    z-index: 99;
+    z-index: 999999;
 }
 
 #nav-bar {
@@ -51,8 +51,6 @@
         border-radius: 5px;
         font-size: 0.75rem;
         font-weight: bold;
-        color: $text-white;
-        overflow: hidden;
 
         .btn-link {
             height: 100%;
@@ -75,6 +73,7 @@
 
         .nav-button {
             margin: 0 8px;
+            color: $text-white;
         }
     }
 
@@ -84,5 +83,62 @@
         left: 0;
         height: 75%;
         border-left: 1px solid rgba(0, 0, 0, 0.2);
+    }
+
+    #friend-requests-menu {
+        display: inline-block;
+        color: $text-primary;
+
+        .popover-body {
+            overflow: auto;
+            max-height: 70vh;
+        }
+
+        .header-property {
+            a {
+                font-weight: normal;
+                margin-left: 5px;
+            }
+        }
+
+        .friend-requests {
+            margin: 0;
+            padding: 0;
+            font-size: 0.75rem;
+        }
+
+        .friend-request {
+            display: flex;
+            align-items: center;
+            padding: 10px 5px;
+
+            .friend-avatar {
+                width: 40px;
+                height: 40px;
+                margin-right: 5px;
+            }
+
+            .request-info {
+                display: flex;
+                flex-direction: column;
+                white-space: nowrap;
+                margin-right: 25px;
+
+                .mutual-friends {
+                    color: $text-secondary;
+                    font-weight: normal;
+                }
+            }
+
+            .request-actions {
+                white-space: nowrap;
+                margin-left: auto;
+            }
+        }
+
+        .card-footer {
+            display: flex;
+            justify-content: center;
+        }
     }
 }
