--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -53,6 +53,7 @@
         font-weight: bold;
 
         .btn-link {
+            color: $white;
             height: 100%;
             padding: 0 10px;
         }
