--- a/scss/pages/_newsfeed.scss
+++ b/scss/pages/_newsfeed.scss
@@ -675,7 +675,7 @@
 
         .post-content {
             line-height: 1.5;
-            padding: 5 15px 10px 15px;
+            padding: 5px 15px 10px 15px;
         }
 
         .post-img {
